# clips_vendor-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  core_cast_c.patch.in  debian.store  deffacts_callback.patch.in  deffunction_callback.patch.in  defglobal_callback.patch.in  defmodule_callback.patch.in  deftemplate_callback.patch.in  package.xml  patches.conf  redefine_callback.patch.in  releaser_history.json  rpm.store  ruledef_callback.patch.in  run_callback.patch.in  tracks.yaml
buildsys/branches/64x/: CMakeLists.txt
debian/: changelog  control  gbp.conf  rules
rpm/: ros-humble-clips-vendor.spec  ros-jazzy-clips-vendor.spec  ros-kilted-clips-vendor.spec  ros-rolling-clips-vendor.spec  template.spec
